# llm-model-7b-deployment

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build-docker-images.yaml
model-api-app/: Chart.yaml  values.yaml
model-api-app/overlays/: values-prod.yaml
model-api-app/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  pvc.yaml  secret.yaml  service.yaml
model_inference/: Dockerfile  api_schema.py  main.py  pyproject.toml  utils.py
predownload-script/: Dockerfile  model_download.py  pyproject.toml
